# Lanelet2

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.kinetic  Dockerfile_conan  Dockerfile_conan_cp38  Doxyfile  LICENSE  README.md  build.sh  conanfile.py  index.html  mkdocs.yml  rosdoc.yaml  run.sh  search.html  setup.sh  sitemap.xml
lanelet2/: CHANGELOG.rst  CMakeLists.txt  clang-tidy-fixes.yaml  codeclimate.json  package.xml
lanelet2_core/: CHANGELOG.rst  CMakeLists.txt  CMakeLists_conan.cmake  README.md  index.html  package.xml
lanelet2_core/Architecture/: index.html
lanelet2_core/GeometryPrimer/: index.html
lanelet2_core/Lanelet1Compability/: index.html
lanelet2_core/LaneletAndAreaTagging/: index.html
lanelet2_core/LaneletPrimitives/: index.html
lanelet2_core/LinestringTagging/: index.html
lanelet2_core/RegulatoryElementTagging/: index.html
lanelet2_core/cmake/: ConfigExtras.cmake
lanelet2_core/doc/: Architecture.md  GeometryPrimer.md  Lanelet1Compability.md  LaneletAndAreaTagging.md  LaneletPrimitives.md  LinestringTagging.md  RegulatoryElementTagging.md
lanelet2_core/example/: api_style_example.cpp
lanelet2_core/include/lanelet2_core/: Attribute.h  Exceptions.h  Forward.h  LaneletMap.h
lanelet2_core/res/: lanelet_gdb.py  qtcreator_debugging_helpers.py
lanelet2_core/src/: Attribute.cpp  BasicRegulatoryElements.cpp  Lanelet.cpp  LaneletMap.cpp  LaneletSequence.cpp  LineStringGeometry.cpp  PolygonTriangulationGeometry.cpp  RegulatoryElement.cpp  RegulatoryElementGeometry.cpp
lanelet2_core/test/: lanelet_map_test_case.h  test_area.cpp  test_attribute.cpp  test_lanelet.cpp  test_lanelet_map.cpp  test_lanelet_map_geometry.cpp  test_lanelet_or_area.cpp  test_lanelet_sequence.cpp  test_linestring.cpp  test_point.cpp  test_polygon.cpp  test_regulatory_element.cpp
lanelet2_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  custom.cmake  index.html  package.xml
lanelet2_examples/scripts/: tutorial.py
lanelet2_examples/src/: ExampleHelpers.h
lanelet2_examples/src/01_dealing_with_lanelet_primitives/: main.cpp
lanelet2_examples/src/02_regulatory_elements/: main.cpp
lanelet2_examples/src/03_lanelet_map/: main.cpp
lanelet2_examples/src/04_reading_and_writing/: main.cpp
lanelet2_examples/src/05_traffic_rules/: main.cpp
lanelet2_examples/src/06_routing/: main.cpp
lanelet2_examples/src/07_matching/: main.cpp
lanelet2_examples/test/: test_examples.py
lanelet2_io/: CHANGELOG.rst  CMakeLists.txt  CMakeLists_conan.cmake  README.md  custom.cmake  index.html  package.xml
lanelet2_io/cmake/: ConfigExtras.cmake
lanelet2_io/include/lanelet2_io/: Configuration.h  Exceptions.h  Io.h  Projection.h
lanelet2_io/src/: BinHandler.cpp  Factory.cpp  Io.cpp  OsmFile.cpp  OsmHandlerLoad.cpp  OsmHandlerWrite.cpp
lanelet2_io/test/: TestBinHandler.cpp  TestLanelet2Io.cpp  TestOsmFile.cpp  TestOsmHandler.cpp  TestSetup.h  TestSimpleUsage.cpp
lanelet2_io/test/test_data/: mapping_example.osm
lanelet2_maps/: CHANGELOG.rst  CMakeLists.txt  README.md  index.html  package.xml
lanelet2_maps/doc/: Mapping.md
lanelet2_maps/josm/: laneletpresets.xml  lanelets.mapcss  lines.mapcss
lanelet2_maps/res/: mapping_example-debug.osm  mapping_example.osm
lanelet2_matching/: CHANGELOG.rst  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  custom.cmake  index.html  package.xml
lanelet2_matching/include/lanelet2_matching/: Exceptions.h  LaneletMatching.h  Types.h  Utilities.h
lanelet2_matching/python_api/: python.cpp
lanelet2_matching/src/: LaneletMatching.cpp  Utilities.cpp
lanelet2_matching/test/: lanelet2_matching.cpp  lanelet2_matching_integration.cpp
lanelet2_projection/: CHANGELOG.rst  CMakeLists.txt  CMakeLists_conan.cmake  README.md  index.html  package.xml
lanelet2_projection/Map_Projections_Coordinate_Systems/: index.html
lanelet2_projection/cmake/: ConfigExtras.cmake
lanelet2_projection/doc/: Map_Projections_Coordinate_Systems.md
lanelet2_projection/include/lanelet2_projection/: Geocentric.h  LocalCartesian.h  UTM.h  (+2 more)
lanelet2_projection/src/: Geocentric.cpp  LocalCartesian.cpp  LocalFrameProjector.cpp  UTM.cpp
lanelet2_projection/test/: test_Geocentric.cpp  test_LocalCartesian.cpp  test_Mercator.cpp  test_UTM.cpp
lanelet2_python/: CHANGELOG.rst  CMakeLists.txt  README.md  __init__.py  index.html  package.xml  setup.py  setup.py.template
lanelet2_python/python_api/: converter.h  core.cpp  geometry.cpp  io.cpp  map_learning.cpp  matching.cpp  ml_converter.cpp  projection.cpp  routing.cpp  std_map_indexing.h  traffic_rules.cpp
lanelet2_python/scripts/: allow_bicycles.py  create_debug_routing_graph.py  make_ids_positive.py  print_ids.py  route.py
lanelet2_python/test/: lanelet2_python.cpp  test_lanelet2.py  test_lanelet2_map_learning.py  test_lanelet2_matching.py  test_lanelet2_ml_converter.py  test_lanelet2_projection.py
lanelet2_routing/: CHANGELOG.rst  CMakeLists.txt  CMakeLists_conan.cmake  README.md  index.html  lanelet2_routing.html  package.xml
lanelet2_routing/doc/: lanelet2_routing.html
lanelet2_routing/res/: routing.mapcss
lanelet2_routing/src/: LaneletPath.cpp  Route.cpp  RouteBuilder.cpp  RoutingCost.cpp  RoutingGraph.cpp  RoutingGraphBuilder.cpp
lanelet2_routing/test/: LaneletTestMap.xml  test_lanelet_or_area_path.cpp  test_relations.cpp  test_route.cpp  test_routing.cpp  test_routing_graph_container.cpp  test_routing_map.h  test_routing_visualization.cpp
lanelet2_traffic_rules/: CHANGELOG.rst  CMakeLists.txt  CMakeLists_conan.cmake  README.md  index.html  package.xml
lanelet2_traffic_rules/src/: GenericTrafficRules.cpp  GermanTrafficRules.cpp  TrafficRules.cpp  TrafficRulesFactory.cpp
lanelet2_traffic_rules/test/: lanelet2_traffic_rules.cpp
lanelet2_validation/: CHANGELOG.rst  CMakeLists.txt  CMakeLists_conan.cmake  README.md  index.html  package.xml
lanelet2_validation/src/: Cli.cpp  Validation.cpp  ValidatorFactory.cpp
lanelet2_validation/test/: lanelet2_validation.cpp
(+253 files in other folders)
