<package format="2">
  <name>lanelet2</name>
  <version>1.0.1</version>
  <description>Meta-package for lanelet2</description>

  <license>BSD</license>
  <maintainer email="fabian.poggenhans@kit.edu">Fabian Poggenhans</maintainer>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>lanelet2_core</exec_depend>
  <exec_depend>lanelet2_io</exec_depend>
  <exec_depend>lanelet2_traffic_rules</exec_depend>
  <exec_depend>lanelet2_routing</exec_depend>
  <exec_depend>lanelet2_python</exec_depend>
  <exec_depend>lanelet2_maps</exec_depend>
  <exec_depend>lanelet2_projection</exec_depend>
  <exec_depend>lanelet2_validation</exec_depend>
  <exec_depend>lanelet2_examples</exec_depend>
  <export>
    <metapackage />
  </export>
</package>
