<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2</name>
  <version>1.1.1</version>
  <description>Meta-package for lanelet2</description>

  <license>BSD</license>
  <maintainer email="fabian.poggenhans@kit.edu">Fabian Poggenhans</maintainer>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_core</buildtool_depend>
  <buildtool_depend>ros_environment</buildtool_depend>
  <exec_depend>lanelet2_core</exec_depend>
  <exec_depend>lanelet2_io</exec_depend>
  <exec_depend>lanelet2_traffic_rules</exec_depend>
  <exec_depend>lanelet2_routing</exec_depend>
  <exec_depend>lanelet2_python</exec_depend>
  <exec_depend>lanelet2_maps</exec_depend>
  <exec_depend>lanelet2_projection</exec_depend>
  <exec_depend>lanelet2_validation</exec_depend>
  <exec_depend>lanelet2_examples</exec_depend>
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
