<?xml version="1.0"?>
<package format="2">
  <name>lanelet2_examples</name>
  <version>1.0.1</version>
  <description>Examples for working with Lanelet2</description>

  <license>BSD</license>
  <maintainer email="fabian.poggenhans@kit.edu">Fabian Poggenhans</maintainer>
  <author email="fabian.poggenhans@kit.edu">Fabian Poggenhans</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>mrt_cmake_modules</buildtool_depend>
  <buildtool_export_depend>mrt_cmake_modules</buildtool_export_depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_python</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_projection</depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosbash</test_depend>
  <export>
    <rosdoc config="../rosdoc.yaml" />
  </export>
</package>
