<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2_projection</name>
  <version>1.1.1</version>
  <description>Lanelet2 projection library for lat/lon to local x/y conversion</description>

  <license>BSD</license>
  <maintainer email="jan-hendrik.pauls@kit.edu">Jan-Hendrik Pauls</maintainer>
  <author email="jan-hendrik.pauls@kit.edu">Jan-Hendrik Pauls</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_core</buildtool_depend>
  <buildtool_depend>mrt_cmake_modules</buildtool_depend>
  <buildtool_export_depend>mrt_cmake_modules</buildtool_export_depend>
  <test_depend>gtest</test_depend>
  <depend>lanelet2_io</depend>
  <depend>geographiclib</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <rosdoc config="../rosdoc.yaml" />
  </export>
</package>
