<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanelet2_routing</name>
  <version>1.1.1</version>
  <description>Routing module for lanelet2</description>

  <license>BSD</license>
  <maintainer email="fabian.poggenhans@kit.edu">Fabian Poggenhans</maintainer>
  <author email="mayr@fzi.de">Matthias Mayr</author>
  <url type="repository">https://github.com/fzi-forschungszentrum-informatik/lanelet2.git</url>
  
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_core</buildtool_depend>
  <buildtool_depend>mrt_cmake_modules</buildtool_depend>
  <buildtool_export_depend>mrt_cmake_modules</buildtool_export_depend>
  <test_depend>gtest</test_depend>
  <depend>boost</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_traffic_rules</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <rosdoc config="../rosdoc.yaml" />
  </export>
</package>
